# lgtm-cat-processor

./: .gitignore  Dockerfile  Makefile  README.md  buildspec.yml  pyproject.toml
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
src/: main.py
src/domain/: lgtm_image_repository_interface.py  object_storage_repository_interface.py  s3_repository_interface.py
src/infrastructure/: db.py  lgtm_image.py  lgtm_image_repository.py  s3_repository.py
src/lgtm_cat_processor/: __init__.py
src/log/: logging.py
src/presentation/: handle_process.py
src/usecase/: convert_to_webp_usecase.py  generate_lgtmI_image_usecase.py  judge_image_usecase.py  store_to_db_usecase.py
