[project]
name = "lgtm-cat-processor"
version = "0.1.0"
description = "猫のLGTM画像を生成するプロジェクト"
authors = [
    { name = "kobayashi-m42", email = "m42kobayashi@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lgtm_cat_processor"]
