[project]
name = "lgtm-cat-processor"
version = "0.1.0"
description = "猫のLGTM画像を生成するプロジェクト"
authors = [
    { name = "kobayashi-m42", email = "m42kobayashi@gmail.com" }
]
dependencies = [
    "boto3>=1.35.10",
    "pillow>=10.4.0",
    "boto3-stubs[s3]>=1.35.12",
    "sqlalchemy>=2.0.34",
    "mysql-connector-python>=9.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"
    
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.3",
    "mypy>=1.11.2",
    "types-pymysql>=1.1.0.20240524",
]
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lgtm_cat_processor"]
